objects/alm_pm2__Deployment__c.object
<CustomObject>
 <fullName>alm_pm2__Deployment__c</fullName>
 <description>Represents an overall deployment of metadata components.</description>
 <fields>
  <fullName>alm_pm2__Build__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <description>The latest build for this deployment</description>
  <inlineHelpText>The latest build for this deployment</inlineHelpText>
  <label>Build</label>
  <referenceTo>alm_pm2__Build__c</referenceTo>
  <relationshipLabel>Deployments</relationshipLabel>
  <relationshipName>Deployments</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Completed_Build__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Completed Build</label>
  <referenceTo>alm_pm2__Build__c</referenceTo>
  <relationshipLabel>Deployments (Completed Build)</relationshipLabel>
  <relationshipName>Deployments1</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Deployment_Attempt__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Deployment Attempt</label>
  <referenceTo>alm_pm2__Deployment_Attempt__c</referenceTo>
  <relationshipLabel>Deployments</relationshipLabel>
  <relationshipName>Deployments</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Release__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Release</label>
  <referenceTo>alm_pm2__Release__c</referenceTo>
  <relationshipLabel>Deployments</relationshipLabel>
  <relationshipName>Deployments</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Source__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Source</label>
  <referenceTo>alm_pm2__Instances__c</referenceTo>
  <relationshipLabel>Deployments</relationshipLabel>
  <relationshipName>Deployments_Source</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Target__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Target</label>
  <referenceTo>alm_pm2__Instances__c</referenceTo>
  <relationshipLabel>Deployments (Target)</relationshipLabel>
  <relationshipName>Deployments_Target</relationshipName>
  <type>Lookup</type>
 </fields>
 <label>Deployment</label>
 <nameField>
  <label>Deployment Name</label>
  <type>Text</type>
 </nameField>
 <pluralLabel>Deployments</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>